#
# configure script for vtk source directory
#
AC_INIT(vtkActor.cxx)

#
# check for some programs we use
#
AC_PROG_CC
AC_PROG_CXX
AC_PROG_RANLIB

TKWIDGET=""
AC_ARG_WITH(tkwidget,
         [  --with-tkwidget           build the vtkTkRenderWidget class],
	 TKWIDGET=vtkTkRenderWidget.o)
AC_SUBST(TKWIDGET)

if test ! -r targets.make
then
    echo "Copying $srcdir/targets.make to build directory"
    cp $srcdir/targets.make targets.make || exit 1
fi

# get the common settings
. ../vtkConfig.sh

BIGENDIAN=$TMP_BIGENDIAN
USE_TOOLKIT_FLAGS=$TMP_USE_TOOLKIT_FLAGS
AC_SUBST(USE_TOOLKIT_FLAGS)

AC_SUBST(BIGENDIAN)
BUILD_TCL=$TMP_BUILD_TCL
AC_SUBST(BUILD_TCL)
CLEAN_TCL=$TMP_CLEAN_TCL
AC_SUBST(CLEAN_TCL)
BUILD_JAVA=$TMP_BUILD_JAVA
AC_SUBST(BUILD_JAVA)
CLEAN_JAVA=$TMP_CLEAN_JAVA
AC_SUBST(CLEAN_JAVA)
MAKEINCLUDE=$TMP_MAKEINCLUDE
AC_SUBST(MAKEINCLUDE)
MAKEQUOTE=$TMP_MAKEQUOTE
AC_SUBST(MAKEQUOTE)
VTK_SHLIB_CFLAGS=$TMP_VTK_SHLIB_CFLAGS
AC_SUBST(VTK_SHLIB_CFLAGS)
VTK_LIB_EXT=$TMP_VTK_LIB_EXT
AC_SUBST(VTK_LIB_EXT)
SHLIB_LD=$TMP_SHLIB_LD
AC_SUBST(SHLIB_LD)
DL_LIBS=$TMP_DL_LIBS
AC_SUBST(DL_LIBS)
SHLIB_LD_LIBS=$TMP_SHLIB_LD_LIBS
AC_SUBST(SHLIB_LD_LIBS)
SHLIB_SUFFIX=$TMP_SHLIB_SUFFIX
AC_SUBST(SHLIB_SUFFIX)
SHLIB_VERSION=$TMP_SHLIB_VERSION
AC_SUBST(SHLIB_VERSION)
THREAD_FLAGS=$TMP_THREAD_FLAGS
AC_SUBST(THREAD_FLAGS)
THREAD_LIBS=$TMP_THREAD_LIBS
AC_SUBST(THREAD_LIBS)
VTK_INLINE_FLAGS=$TMP_VTK_INLINE_FLAGS
AC_SUBST(VTK_INLINE_FLAGS)
VTK_TEMPLATE_FLAGS=$TMP_VTK_TEMPLATE_FLAGS
AC_SUBST(VTK_TEMPLATE_FLAGS)

HAVE_SETMON=$TMP_HAVE_SETMON
AC_SUBST(HAVE_SETMON)
SBR_OBJ=$TMP_SBR_OBJ
AC_SUBST(SBR_OBJ)
SBR_FLAGS=$TMP_SBR_FLAGS
AC_SUBST(SBR_FLAGS)
SBR_LIBS=$TMP_SBR_LIBS
AC_SUBST(SBR_LIBS)
GLR_OBJ=$TMP_GLR_OBJ
AC_SUBST(GLR_OBJ)
GLR_FLAGS=$TMP_GLR_FLAGS
AC_SUBST(GLR_FLAGS)
GLR_LIBS=$TMP_GLR_LIBS
AC_SUBST(GLR_LIBS)
OGLR_LIBS=$TMP_OGLR_LIBS
AC_SUBST(OGLR_LIBS)
OGLR_OBJ=$TMP_OGLR_OBJ
AC_SUBST(OGLR_OBJ)
OGLR_INCLUDE=$TMP_OGLR_INCLUDE
AC_SUBST(OGLR_INCLUDE)
OGLR_FLAGS=$TMP_OGLR_FLAGS
AC_SUBST(OGLR_FLAGS)
XGLR_OBJ=$TMP_XGLR_OBJ
AC_SUBST(XGLR_OBJ)
XGLR_FLAGS=$TMP_XGLR_FLAGS
AC_SUBST(XGLR_FLAGS)
XGL_HOME=$TMP_XGL_HOME
AC_SUBST(XGL_HOME)
XGLR_LIBS=$TMP_XGLR_LIBS
AC_SUBST(XGLR_LIBS)


AC_CONFIG_SUBDIRS(tcl java examplesCxx)

# Find the X include directories and libraries
AC_PATH_XTRA

dnl Checks for library functions.
AC_OUTPUT(Makefile)


