#
# configure script for vtk source directory
#
AC_INIT(vtkActor.cxx)

TKWIDGET=""
AC_ARG_WITH(tkwidget,
         [  --with-tkwidget           build the vtkTkRenderWidget class],
	 if test "$withval" = yes; then
	 TKWIDGET=vtkTkRenderWidget.o
         fi,)
AC_ARG_WITH(tkwidgets,
         [  --with-tkwidgets           build the vtkTkRenderWidget class],
	 if test "$withval" = yes; then
	 TKWIDGET=vtkTkRenderWidget.o
         fi,)
AC_SUBST(TKWIDGET)

AC_ARG_WITH(shared,
         [  --with-shared               create shared libraries],
         [vtk_shared_ok=$withval], [vtk_shared_ok=no])

if test ! -r targets.make
then
    echo "Copying $srcdir/targets.make to build directory"
    cp $srcdir/targets.make targets.make || exit 1
fi

# option for handling BSD style makefile includes
#
AC_ARG_WITH(bsdmake,
         [  --with-bsdmake            uses bsd style makefile includes],
	 if test "$withval" = yes; then
         MAKEINCLUDE=".include"
         MAKEQUOTE='"'
         fi,
         MAKEINCLUDE="include"
         MAKEQUOTE='')
AC_SUBST(MAKEINCLUDE)
AC_SUBST(MAKEQUOTE)

case "$vtk_cv_system_name" in
  CYGWIN*)
    TCL_INTERACTOR_OBJ=""
    ;;
  *)
    TCL_INTERACTOR_OBJ="vtkXRenderWindowTclInteractor.o"
    ;;
esac
AC_SUBST(TCL_INTERACTOR_OBJ)
 
AC_CONFIG_SUBDIRS(python tcl java examplesCxx)

dnl Checks for library functions.
AC_OUTPUT(Makefile)


