#
# configure script for vtk source directory
#
AC_INIT(vtkImageFilter.cxx)


TKWIDGET=""
AC_ARG_WITH(tkwidget,
         [  --with-tkwidget           build the vtkTkImageViewerWidget class],
	 if test "$withval" = yes; then
	 TKWIDGET="vtkTkImageViewerWidget.o vtkTkImageWindowWidget.o"
         fi)
AC_ARG_WITH(tkwidgets,
         [  --with-tkwidgets           build the vtkTkImageViewerWidget class],
	 if test "$withval" = yes; then
	 TKWIDGET="vtkTkImageViewerWidget.o vtkTkImageWindowWidget.o"
         fi)
AC_SUBST(TKWIDGET)

if test ! -r targets.make
then
    echo "Copying $srcdir/targets.make to build directory"
    cp $srcdir/targets.make targets.make || exit 1
fi

# option for handling BSD style makefile includes
#
AC_ARG_WITH(bsdmake,
         [  --with-bsdmake            uses bsd style makefile includes],
	 if test "$withval" = yes; then
         MAKEINCLUDE=".include"
         MAKEQUOTE='"'
         fi,
         MAKEINCLUDE="include"
         MAKEQUOTE='')
AC_SUBST(MAKEINCLUDE)
AC_SUBST(MAKEQUOTE)

AC_CONFIG_SUBDIRS(python tcl java examplesCxx)

dnl Checks for library functions.
AC_OUTPUT(Makefile)
