#
# configure script for vtk source directory
#
AC_INIT(concrete.l)

# option for handling BSD style makefile includes
#
AC_ARG_WITH(bsdmake,
         [  --with-bsdmake            uses bsd style makefile includes],
         MAKEINCLUDE=".include"
         MAKEQUOTE='"',
         MAKEINCLUDE="include"
         MAKEQUOTE='')
AC_SUBST(MAKEINCLUDE)
AC_SUBST(MAKEQUOTE)

AC_CONFIG_SUBDIRS(vtk)

dnl Checks for library functions.
AC_OUTPUT(Makefile)


